k8s/overlays/prod/replicas-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: deliver-eats
spec:
  replicas: 3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: deliver-eats
spec:
  replicas: 3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: deliver-eats
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: deliver-eats
spec:
  replicas: 2
